hphp/test/slow/prop-type-hints/invalid-prop-type1.php.expectf
Fatal error: A scope resolution operator `::` is expected here. in %s/invalid-prop-type1.php on line 5
